--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 GOOGLE_ID=708361970719-55vujt5f418r2l5ienrdooegcambn9hn.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
 MONGODB_URI = mongodb+srv://mbozkaya27:<Eymen2016>@cluster0.1bp4cin.mongodb.net/?retryWrites=true&w=majority
+
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://localhost:3000
+NEXTAUTH_SECRET=wqEpA5C2fRdq7/e7zRFBXJmJCE4Tp3RARHxP0AqlTG4=
+
